Switch 2024.1 to EOM tags
Change-Id: Ie029b97cb007aa74b894323dac93203970c9d545
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/ansible-collection-requirements.yml
+++ b/ansible-collection-requirements.yml
@@ -11,7 +11,7 @@ collections:
 - name: openstack.osa
   source: https://opendev.org/openstack/openstack-ansible-plugins
   type: git
-  version: a63e241edfc4689713d62ccc396f4a46134f493f
+  version: 2024.1-eom
 - name: community.general
   source: https://github.com/ansible-collections/community.general
   type: git
