--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -2,302 +2,302 @@
 - name: ansible-hardening
   scm: git
   src: https://opendev.org/openstack/ansible-hardening
-  version: 8a78c696fc1d9d5651a0861d26028b2a0f58e911
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-25'
 - name: frrouting
   scm: git
   src: https://opendev.org/openstack/ansible-role-frrouting
-  version: 8af8a9a0aecb683506ffff61440b7d03bc61f495
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: pki
   src: https://opendev.org/openstack/ansible-role-pki
   scm: git
-  version: d084fe5cc465a6c938bebb8c67a73fff53d52679
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: python_venv_build
   src: https://opendev.org/openstack/ansible-role-python_venv_build
   scm: git
-  version: b60967f59fafb577f490f1cd4ccf7350c9a056ca
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-09'
 - name: qdrouterd
   scm: git
   src: https://opendev.org/openstack/ansible-role-qdrouterd
-  version: 6db8b2c71d664cfea0e60198600c74a9930ac99b
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: systemd_mount
   src: https://opendev.org/openstack/ansible-role-systemd_mount
   scm: git
-  version: c3b8f830a0a8a19bdfc7273efdef6052416ce001
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: systemd_networkd
   src: https://opendev.org/openstack/ansible-role-systemd_networkd
   scm: git
-  version: 19bf6ab9c01fbcb06165f152dd1939d8f7a5f2d7
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-07'
 - name: systemd_service
   src: https://opendev.org/openstack/ansible-role-systemd_service
   scm: git
-  version: 88697e28783bea43c84607fe1727a8ca9e96c13f
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: uwsgi
   src: https://opendev.org/openstack/ansible-role-uwsgi
   scm: git
-  version: d1ad8d3384bff6273e6600c315080f10ada5d49f
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-29'
 - name: zookeeper
   src: https://opendev.org/openstack/ansible-role-zookeeper
   scm: git
-  version: 4ad8f8d2d389deb9fbff65fd8dd565f13a1625a5
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: apt_package_pinning
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-apt_package_pinning
-  version: 8ad24da652119ae7bc4e490299275fde6e7effb7
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: ceph_client
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-ceph_client
-  version: b6ed4380b35561ba3813a81b58a806d3da961b42
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-08'
 - name: galera_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-galera_server
-  version: ff99083efc60e664836911d67d33463d0cbc46a0
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-06-03'
 - name: haproxy_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-haproxy_server
-  version: b4842e1e3ab7c177fb033f0ee6ec699164790249
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-23'
 - name: lxc_container_create
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_container_create
-  version: afe5e20396bad03e0f457cb67e0f8c639e0db159
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-07'
 - name: lxc_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_hosts
-  version: dfcaf2629e0d66962e69020667dc483ec770ca81
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-09'
 - name: memcached_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-memcached_server
-  version: 30a9aee8c624ebbcf5175c1bc876a96b1908fc1c
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: openstack_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_hosts
-  version: 2ebec2b2c356a253381e0c76b4c3e72c90aff65f
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-02'
 - name: openstack_openrc
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_openrc
-  version: cb5172191c60693db217d961464b73d139716ae7
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_adjutant
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_adjutant
-  version: f01eda88ee00098159b33234cf66c92f546666f6
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_aodh
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_aodh
-  version: 1407655106ed1f611e7c7f411580f3e5117aecaf
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_barbican
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_barbican
-  version: c149eac9ef482f42894e902067500a9630783fe7
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_blazar
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_blazar
-  version: 7c73bd99b45d0cdd57c311234535fb63ee1f0753
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_ceilometer
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ceilometer
-  version: 3a0673bd65c54c0ec461a32e91425a6bc8b05497
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-02'
 - name: os_cinder
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cinder
-  version: d43f020cda0341d8195837e49a50296c90a6c462
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-23'
 - name: os_cloudkitty
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cloudkitty
-  version: ca6828641338b18a8dbcff4c85758adf82ce7c2d
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_designate
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_designate
-  version: e9b1657a9c7d1302a673a8ae8dcc53b0beaad7ba
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_glance
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_glance
-  version: e94c1124324c4b5eb21a3ff4043729b890533c87
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_gnocchi
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_gnocchi
-  version: be6973bb2bca42b05c15327e0105bd060b06335e
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_heat
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_heat
-  version: 949744c5e4eb2e5e6691697ff5d7ef262cc974da
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-06'
 - name: os_horizon
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_horizon
-  version: cfaacfeede739bad51a6b449f9ff278668e4d4f7
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-01'
 - name: os_ironic
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ironic
-  version: 70c2fadf556f20e2d575e80003b8c10c34b30c79
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-30'
 - name: os_keystone
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_keystone
-  version: 54591057cf40c363826e612d8748ee3e85d2c2cc
-  trackbranch: stable/2024.1
-  shallow_since: '2024-11-08'
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
+  shallow_since: '2025-09-13'
 - name: os_magnum
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_magnum
-  version: 23b6423b064de391cdaed8d82ef1c9770b4b0670
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-11'
 - name: os_manila
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_manila
-  version: 2ff861410af79b23f563905422523bbf5f3ab97d
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-10-01'
 - name: os_masakari
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_masakari
-  version: 9bf6dd8d1544296e21011968a679a47cf223e975
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-05'
 - name: os_mistral
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_mistral
-  version: bdd918543af39f36cf7e3d16779df985ea5b2231
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_neutron
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_neutron
-  version: 6b24b34ad1f1fb377547f1d98efde1eb18bf382a
-  trackbranch: stable/2024.1
-  shallow_since: '2024-10-14'
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
+  shallow_since: '2025-11-03'
 - name: os_nova
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_nova
-  version: cd4b7fea53cd688305fafcf430781fb3b816ca92
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-07-23'
 - name: os_octavia
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_octavia
-  version: 2209d774e46990ba355407e3224192e73eb0038d
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-09-23'
 - name: os_placement
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_placement
-  version: 0a8f3e75826b15ffdfb75822156dacb91dfa1d97
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_rally
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_rally
-  version: e6af01f10a1bb922797fc7f710a45106207e9709
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-11'
 - name: os_skyline
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_skyline
-  version: 6ad21c5632dd21882639eccb063913629063efdc
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-05'
 - name: os_swift
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_swift
-  version: f0be5d7c1bc2af781b5b4b653bb06d28d6d6cf5b
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_tacker
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tacker
-  version: 00211d3799a95d460b1bdaecaa896903df78c5bc
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_tempest
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tempest
-  version: 9597f64e25dd02a5fbf4d28108e01c6c1b1d78a0
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-05-07'
 - name: os_trove
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_trove
-  version: 71e3000c998438e22dbf5cade176aabfe0898083
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-03'
 - name: os_zun
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_zun
-  version: d69a62c089884f3121dcd299a3be507ddf213334
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-06-05'
 - name: rabbitmq_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-rabbitmq_server
-  version: a05788828f46003b0fae5c5cd0b69cdc534f2b0a
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2024-11-17'
 - name: repo_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-repo_server
-  version: 14c11d3392440acedf982fd6580e5aed5f581f2e
-  trackbranch: stable/2024.1
+  version: 2024.1-eom
+  trackbranch: unmaintained/2024.1
   shallow_since: '2025-01-12'
 # External dependencies
 - name: etcd
