--- a/inventory/group_vars/aodh_all/source_git.yml
+++ b/inventory/group_vars/aodh_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Aodh service
 aodh_git_repo: "{{ openstack_opendev_base_url }}/openstack/aodh"
-aodh_git_install_branch: eb7a102a3ea773e6a14915565d02aeecc4bae89e
-aodh_git_track_branch: stable/2024.1
+aodh_git_install_branch: 2024.1-eom
+aodh_git_track_branch: unmaintained/2024.1
