--- a/inventory/group_vars/barbican_all/source_git.yml
+++ b/inventory/group_vars/barbican_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Barbican service
 barbican_git_repo: "{{ openstack_opendev_base_url }}/openstack/barbican"
-barbican_git_install_branch: 6945564c4c3c8203f779d17b41e4c38d30664d84
-barbican_git_track_branch: stable/2024.1
+barbican_git_install_branch: 2024.1-eom
+barbican_git_track_branch: unmaintained/2024.1
