--- a/inventory/group_vars/ceilometer_all/source_git.yml
+++ b/inventory/group_vars/ceilometer_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Ceilometer service
 ceilometer_git_repo: "{{ openstack_opendev_base_url }}/openstack/ceilometer"
-ceilometer_git_install_branch: be268457e8aff4580e6cbb9f6158830d0f6a9294
-ceilometer_git_track_branch: stable/2024.1
+ceilometer_git_install_branch: 2024.1-eom
+ceilometer_git_track_branch: unmaintained/2024.1
