--- a/inventory/group_vars/cloudkitty_all/source_git.yml
+++ b/inventory/group_vars/cloudkitty_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Cloudkitty service
 cloudkitty_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty"
-cloudkitty_git_install_branch: 5870f9534f5925d35b559721a3d64e9a9fe34c80
-cloudkitty_git_track_branch: stable/2024.1
+cloudkitty_git_install_branch: 2024.1-eom
+cloudkitty_git_track_branch: unmaintained/2024.1
