--- a/inventory/group_vars/designate_all/source_git.yml
+++ b/inventory/group_vars/designate_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Designate service
 designate_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate"
-designate_git_install_branch: af7445fa0add6950f564cee6d9bbc052ba90d90c
-designate_git_track_branch: stable/2024.1
+designate_git_install_branch: 2024.1-eom
+designate_git_track_branch: unmaintained/2024.1
