--- a/inventory/group_vars/heat_all/source_git.yml
+++ b/inventory/group_vars/heat_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Heat service
 heat_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat"
-heat_git_install_branch: e5407ba78df24f0fbe31d14b27433ca095dc70de
-heat_git_track_branch: stable/2024.1
+heat_git_install_branch: 2024.1-eom
+heat_git_track_branch: unmaintained/2024.1
