--- a/inventory/group_vars/horizon_all/source_git.yml
+++ b/inventory/group_vars/horizon_all/source_git.yml
@@ -13,17 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 29.09.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Horizon service
 horizon_git_repo: "{{ openstack_opendev_base_url }}/openstack/horizon"
-horizon_git_install_branch: 70fbca648b8ea8a1a6540a126fc31e1f1c8027de
-horizon_git_track_branch: stable/2024.1
+horizon_git_install_branch: 2024.1-eom
+horizon_git_track_branch: unmaintained/2024.1
 
 ## Adjutant dashboard plugin
 adjutant_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/adjutant-ui"
-adjutant_dashboard_git_install_branch: 098cfe0020f1c64c40da6800bd053656419f3b28
-adjutant_dashboard_git_track_branch: stable/2024.1
+adjutant_dashboard_git_install_branch: 2024.1-eom
+adjutant_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Barbican dashboard plugin
 barbican_dashboard_git_repo: "{{ openstack_opendev_base_url }}//openstack/barbican-ui"
@@ -32,33 +32,33 @@ barbican_dashboard_git_track_branch: master
 
 ## Cloudkitty dashboard plugin
 cloudkitty_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty-dashboard"
-cloudkitty_dashboard_git_install_branch: 6ed70436e51c75fb348597281ba772b26ebbfcf2
-cloudkitty_dashboard_git_track_branch: stable/2024.1
+cloudkitty_dashboard_git_install_branch: 2024.1-eom
+cloudkitty_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Designate dashboard plugin
 designate_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate-dashboard"
-designate_dashboard_git_install_branch: aace643d16b729c79d819494f3523720de49ddd8
-designate_dashboard_git_track_branch: stable/2024.1
+designate_dashboard_git_install_branch: 2024.1-eom
+designate_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Heat dashboard plugin
 heat_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat-dashboard"
-heat_dashboard_git_install_branch: 0f8ddbaec6fc01733e6ac7d709e7f36761330ede
-heat_dashboard_git_track_branch: stable/2024.1
+heat_dashboard_git_install_branch: 2024.1-eom
+heat_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Ironic dashboard plugin
 ironic_dashboard_git_repo: "{{ openstack_opendev_base_url}}/openstack/ironic-ui"
-ironic_dashboard_git_install_branch: 4bf4e0a09a220ce892a7026e69fabf2f36b4d780
-ironic_dashboard_git_track_branch: stable/2024.1
+ironic_dashboard_git_install_branch: 2024.1-eom
+ironic_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Magnum dashboard plugin
 magnum_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum-ui"
-magnum_dashboard_git_install_branch: d6229fe6248f290c3c0a5e3f376ef5a6127bf78d
-magnum_dashboard_git_track_branch: stable/2024.1
+magnum_dashboard_git_install_branch: 2024.1-eom
+magnum_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Masakari dashboard plugin
 masakari_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-dashboard"
-masakari_dashboard_git_install_branch: bf89b7a2e07392a34c175c2c84facba8a153c9b4
-masakari_dashboard_git_track_branch: stable/2024.1
+masakari_dashboard_git_install_branch: 2024.1-eom
+masakari_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Murano dashboard plugin
 murano_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/murano-dashboard"
@@ -72,10 +72,10 @@ sahara_dashboard_git_track_branch: master
 
 ## Horizon Trove dashboard plugin
 trove_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove-dashboard"
-trove_dashboard_git_install_branch: 7d541ee23aeccc650c9b25f0c69b2a59f41a7e08
-trove_dashboard_git_track_branch: stable/2024.1
+trove_dashboard_git_install_branch: 2024.1-eom
+trove_dashboard_git_track_branch: unmaintained/2024.1
 
 ## Horizon Octavia dashboard plugin
 octavia_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia-dashboard"
-octavia_dashboard_git_install_branch: df12d4f080df1330c24abce7e5c3b14c4641b3ce
-octavia_dashboard_git_track_branch: stable/2024.1
+octavia_dashboard_git_install_branch: 2024.1-eom
+octavia_dashboard_git_track_branch: unmaintained/2024.1
