--- a/inventory/group_vars/magnum_all/source_git.yml
+++ b/inventory/group_vars/magnum_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Magnum service
 magnum_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum"
-magnum_git_install_branch: 5bb6e629852de8900f3dbb6a5663f3faae435edb
-magnum_git_track_branch: stable/2024.1
+magnum_git_install_branch: 2024.1-eom
+magnum_git_track_branch: unmaintained/2024.1
