--- a/inventory/group_vars/manila_all/source_git.yml
+++ b/inventory/group_vars/manila_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 29.09.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Manila service
 manila_git_repo: "{{ openstack_opendev_base_url }}/openstack/manila"
-manila_git_install_branch: be19a3a1c716214f7a2557ac4d4d5d9719ad123f
-manila_git_track_branch: stable/2024.1
+manila_git_install_branch: 2024.1-eom
+manila_git_track_branch: unmaintained/2024.1
