--- a/inventory/group_vars/mistral_all/source_git.yml
+++ b/inventory/group_vars/mistral_all/source_git.yml
@@ -17,9 +17,9 @@
 
 ## Mistral service
 mistral_git_repo: "{{ openstack_opendev_base_url }}/openstack/mistral"
-mistral_git_install_branch: 7fb562cca3bf943290d0b8ad0cb6f1519f89f730
-mistral_git_track_branch: stable/2024.1
+mistral_git_install_branch: 2024.1-eom
+mistral_git_track_branch: unmaintained/2024.1
 
 mistral_extra_git_repo: "{{ openstack_opendev_base_url }}/openstack/mistral-extra"
-mistral_extra_git_install_branch: cebacf3e972de8dbd72d05c9563f60501cfbca78
-mistral_extra_git_track_branch: stable/2024.1
+mistral_extra_git_install_branch: 2024.1-eom
+mistral_extra_git_track_branch: unmaintained/2024.1
