--- a/inventory/group_vars/neutron_all/source_git.yml
+++ b/inventory/group_vars/neutron_all/source_git.yml
@@ -13,45 +13,45 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 29.09.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Neutron service
 neutron_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron"
-neutron_git_install_branch: 3f42ac5cafabfb810f89b545a7f4cdada18ac715
-neutron_git_track_branch: stable/2024.1
+neutron_git_install_branch: 2024.1-eom
+neutron_git_track_branch: unmaintained/2024.1
 
 neutron_vpnaas_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-vpnaas"
-neutron_vpnaas_git_install_branch: 8655ef2b0f95a600639636665dd4b83b0a107bc7
-neutron_vpnaas_git_track_branch: stable/2024.1
+neutron_vpnaas_git_install_branch: 2024.1-eom
+neutron_vpnaas_git_track_branch: unmaintained/2024.1
 
 neutron_dynamic_routing_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-dynamic-routing"
-neutron_dynamic_routing_git_install_branch: 4f6b9f262f44d532b8120507eef688c57cf28ec1
-neutron_dynamic_routing_git_track_branch: stable/2024.1
+neutron_dynamic_routing_git_install_branch: 2024.1-eom
+neutron_dynamic_routing_git_track_branch: unmaintained/2024.1
 
 networking_bgpvpn_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-bgpvpn"
-networking_bgpvpn_git_install_branch: 706505df29666b02e500849f87b08cd3c1e81bb3
-networking_bgpvpn_git_track_branch: stable/2024.1
+networking_bgpvpn_git_install_branch: 2024.1-eom
+networking_bgpvpn_git_track_branch: unmaintained/2024.1
 
 networking_sfc_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-sfc"
-networking_sfc_git_install_branch: 693ef93d5080a47470f0d9aafbb5d3fcd3ab7eef
-networking_sfc_git_track_branch: stable/2024.1
+networking_sfc_git_install_branch: 2024.1-eom
+networking_sfc_git_track_branch: unmaintained/2024.1
 
 networking_generic_switch_git_repo: "{{ openstack_opendev_base_url}}/openstack/networking-generic-switch"
-networking_generic_switch_git_install_branch: dc142ec17910ebb0855f9cc21b77af2c554a7bbe
-networking_generic_switch_git_track_branch: stable/2024.1
+networking_generic_switch_git_install_branch: 2024.1-eom
+networking_generic_switch_git_track_branch: unmaintained/2024.1
 
 networking_nsx_git_repo: "{{ openstack_opendev_base_url }}/x/vmware-nsx"
 networking_nsx_git_install_branch: 715cb5fc1174b9226f043e49ffd389add44f070a
 networking_nsx_git_track_branch: master
 
 networking_nsxlib_git_repo: "{{ openstack_opendev_base_url }}/x/vmware-nsxlib"
-networking_nsxlib_git_install_branch: b49988f87a9fedb7e79041359a2bc7df1bf170e5
+networking_nsxlib_git_install_branch: 948a72da034acdd74a08eded88aa19b080e40927
 networking_nsxlib_git_track_branch: master
 
 networking_baremetal_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-baremetal"
-networking_baremetal_git_install_branch: 8dc6edadce564ad4896ecfd5d2bca68396d1d7e6
-networking_baremetal_git_track_branch: stable/2024.1
+networking_baremetal_git_install_branch: 2024.1-eom
+networking_baremetal_git_track_branch: unmaintained/2024.1
 
 networking_ovn_bgp_git_repo: "{{ openstack_opendev_base_url }}/openstack/ovn-bgp-agent"
-networking_ovn_bgp_git_install_branch: 9c5dc36e1aef6551de48fe3dc099a85f61f07b10
-networking_ovn_bgp_git_track_branch: stable/2024.1
+networking_ovn_bgp_git_install_branch: 2024.1-eom
+networking_ovn_bgp_git_track_branch: unmaintained/2024.1
