--- a/inventory/group_vars/placement_all/source_git.yml
+++ b/inventory/group_vars/placement_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Placement service
 placement_git_repo: "{{ openstack_opendev_base_url }}/openstack/placement"
-placement_git_install_branch: b798523e6514dcb9694628998fa9cba388699dac
-placement_git_track_branch: stable/2024.1
+placement_git_install_branch: 2024.1-eom
+placement_git_track_branch: unmaintained/2024.1
