--- a/inventory/group_vars/skyline_all/source_git.yml
+++ b/inventory/group_vars/skyline_all/source_git.yml
@@ -17,8 +17,8 @@
 
 ## Skyline service
 skyline_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-apiserver"
-skyline_git_install_branch: 718cfe2b361e537040b9ab30f377c78041cfc264
-skyline_git_track_branch: stable/2024.1
+skyline_git_install_branch: 2024.1-eom
+skyline_git_track_branch: unmaintained/2024.1
 
 skyline_console_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-console"
 skyline_console_git_install_branch: 4.0.0
