--- a/inventory/group_vars/swift_all/source_git.yml
+++ b/inventory/group_vars/swift_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Swift service
 swift_git_repo: "{{ openstack_opendev_base_url }}/openstack/swift"
-swift_git_install_branch: 38b7cbb29a87e0a6df55f446e518f91a2681a122
-swift_git_track_branch: stable/2024.1
+swift_git_install_branch: 2024.1-eom
+swift_git_track_branch: unmaintained/2024.1
