--- a/inventory/group_vars/zun_all/source_git.yml
+++ b/inventory/group_vars/zun_all/source_git.yml
@@ -17,15 +17,15 @@
 
 ## Zun service
 zun_git_repo: "{{ openstack_opendev_base_url }}/openstack/zun"
-zun_git_install_branch: 82be4a95d0a4ffc9debd390a0a71faa222ac185e
-zun_git_track_branch: stable/2024.1
+zun_git_install_branch: 2024.1-eom
+zun_git_track_branch: unmaintained/2024.1
 
 ## Zun kuryr service
 zun_kuryr_git_repo: "{{ openstack_opendev_base_url }}/openstack/kuryr-libnetwork"
-zun_kuryr_git_install_branch: e57ae2e9f33966a527c44d7fba9ad4854c5c1116
-zun_kuryr_git_track_branch: stable/2024.1
+zun_kuryr_git_install_branch: 2024.1-eom
+zun_kuryr_git_track_branch: unmaintained/2024.1
 
 ## Zun kuryr library
 zun_kuryr_lib_git_repo: "{{ openstack_opendev_base_url }}/openstack/kuryr"
-zun_kuryr_lib_git_install_branch: ccb85d13c955940770b0861257eb2b1d7247558e
-zun_kuryr_lib_git_track_branch: stable/2024.1
+zun_kuryr_lib_git_install_branch: 2024.1-eom
+zun_kuryr_lib_git_track_branch: unmaintained/2024.1
