--- a/inventory/group_vars/all/source_git.yml
+++ b/inventory/group_vars/all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 29.09.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Global Requirements
 requirements_git_repo: "{{ openstack_opendev_base_url }}/openstack/requirements"
-requirements_git_install_branch: a409487a0904de521d1ee034900320a2144356c1
-requirements_git_track_branch: stable/2024.1
+requirements_git_install_branch: 2024.1-eom
+requirements_git_track_branch: unmaintained/2024.1
