--- a/inventory/group_vars/blazar_all/source_git.yml
+++ b/inventory/group_vars/blazar_all/source_git.yml
@@ -17,10 +17,10 @@
 
 ## Blazar service
 blazar_git_repo: "{{ openstack_opendev_base_url }}/openstack/blazar"
-blazar_git_install_branch: fb313a58e824b480ad524b6725c158c60e178caa
-blazar_git_track_branch: stable/2024.1
+blazar_git_install_branch: 2024.1-eom
+blazar_git_track_branch: unmaintained/2024.1
 
 ## Blazar Nova Service
 blazar_nova_git_repo: "{{ openstack_opendev_base_url }}/openstack/blazar-nova"
-blazar_nova_git_install_branch: 6139b96abbc09cbc3760061f4a70c8e0c0c37b08
-blazar_nova_git_track_branch: stable/2024.1
+blazar_nova_git_install_branch: 2024.1-eom
+blazar_nova_git_track_branch: unmaintained/2024.1
