--- a/inventory/group_vars/cinder_all/source_git.yml
+++ b/inventory/group_vars/cinder_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 29.09.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Cinder service
 cinder_git_repo: "{{ openstack_opendev_base_url }}/openstack/cinder"
-cinder_git_install_branch: 97b014df8f7f3fe26c4c3f396d1c9aa5c92f41c6
-cinder_git_track_branch: stable/2024.1
+cinder_git_install_branch: 2024.1-eom
+cinder_git_track_branch: unmaintained/2024.1
