--- a/inventory/group_vars/ironic_all/source_git.yml
+++ b/inventory/group_vars/ironic_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 24.06.2025 ###
+### HEAD as of 05.11.2025 ###
 
 ## Ironic service
 ironic_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic"
-ironic_git_install_branch: 824fe007c99b712715795555e49e8b0832d15341
-ironic_git_track_branch: stable/2024.1
+ironic_git_install_branch: 2024.1-eom
+ironic_git_track_branch: unmaintained/2024.1
 
 ## Ironic inspector service
 ironic_inspector_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic-inspector"
-ironic_inspector_git_install_branch: 714f1cc86b6a9e73f2377eb244a420f144f303aa
-ironic_inspector_git_track_branch: stable/2024.1
+ironic_inspector_git_install_branch: 2024.1-eom
+ironic_inspector_git_track_branch: unmaintained/2024.1
