--- a/inventory/group_vars/masakari_all/source_git.yml
+++ b/inventory/group_vars/masakari_all/source_git.yml
@@ -17,10 +17,10 @@
 
 ## Masakari service
 masakari_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari"
-masakari_git_install_branch: 0734344441bb9137b46a8e7de3a226ee81f440c8
-masakari_git_track_branch: stable/2024.1
+masakari_git_install_branch: 2024.1-eom
+masakari_git_track_branch: unmaintained/2024.1
 
 ## Masakari monitors services
 masakari_monitors_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-monitors"
-masakari_monitors_git_install_branch: 15b3a8ae96973b78b0213e4b5cd97ae5f8001680
-masakari_monitors_git_track_branch: stable/2024.1
+masakari_monitors_git_install_branch: 2024.1-eom
+masakari_monitors_git_track_branch: unmaintained/2024.1
