--- a/inventory/group_vars/tacker_all/source_git.yml
+++ b/inventory/group_vars/tacker_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Tacker service
 tacker_git_repo: "{{ openstack_opendev_base_url }}/openstack/tacker"
-tacker_git_install_branch: 947777edf2b3ec403b96a181159c6dbc91060971
-tacker_git_track_branch: stable/2024.1
+tacker_git_install_branch: 2024.1-eom
+tacker_git_track_branch: unmaintained/2024.1
