--- a/inventory/group_vars/trove_all/source_git.yml
+++ b/inventory/group_vars/trove_all/source_git.yml
@@ -17,5 +17,5 @@
 
 ## Trove service
 trove_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove"
-trove_git_install_branch: 25b7d92ae288a31a937b156f1bf84b882857e982
-trove_git_track_branch: stable/2024.1
+trove_git_install_branch: 2024.1-eom
+trove_git_track_branch: unmaintained/2024.1
