Set Rocky 9 molecule test as non-voting
Based on the investigation made in [1], latest rocky image in quay fails
when being launched on older hardware.

Let's set the job to Non-Voting until a proper solution is found.

[1] https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/966211

Change-Id: Ic330437782fc3f8851d07af042110a822c4773ce
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -369,7 +369,8 @@
       jobs:
         - openstack-ansible-tox-molecule-centos-9-stream
         - openstack-ansible-tox-molecule-debian-bookworm
-        - openstack-ansible-tox-molecule-rockylinux-9
+        - openstack-ansible-tox-molecule-rockylinux-9:
+            voting: false
         - openstack-ansible-tox-molecule-ubuntu-jammy
         - openstack-ansible-tox-molecule-ubuntu-noble
         - openstack-ansible-tox-molecule-centos-10-stream
@@ -377,7 +378,6 @@
       jobs:
         - openstack-ansible-tox-molecule-centos-9-stream
         - openstack-ansible-tox-molecule-debian-bookworm
-        - openstack-ansible-tox-molecule-rockylinux-9
         - openstack-ansible-tox-molecule-ubuntu-jammy
         - openstack-ansible-tox-molecule-ubuntu-noble
         - openstack-ansible-tox-molecule-centos-10-stream
