Improve nova_console_proxy_types logic
Currently nova_console_proxy_types is defined based on the haproxy host
facts, when it's evaluated as part of haproxy_nova_novnc_console_service

As a result, it will not include all assumed architectures and console
types. Moreover, it will fail to resolve the haproxy service in case
some compute is down due to missing 'architecture' flag.

Proposed patch changes the logic and attempts to check for all available
architectures when concluding nova_console_proxy_types list.
Facts gathering for computes should be accomplished by the nova playbook
as haproxy service configuration is executed as part of it.

Closes-Bug: #2122778
Change-Id: I5a48de05df11c8bff0d82045ec8e1c68bb6c322a
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/inventory/group_vars/all/nova.yml
+++ b/inventory/group_vars/all/nova.yml
@@ -24,6 +24,16 @@ nova_novncproxy_port: 6080
 nova_serialconsoleproxy_port: 6083
 
 # Default nova console proxy types
-nova_console_proxy_types:
-  - "{{ nova_console_type | default((ansible_facts['architecture'] == 'aarch64') | ternary('serialconsole', 'novnc')) }}"
-  - "{{ ironic_console_type }}"
+nova_console_type_mapping:
+  x86_64: "{{ nova_console_type | default('novnc') }}"
+  ppc64le: novnc
+  aarch64: serialconsole
+  disabled: disabled
+
+nova_console_proxy_types: |
+  {% set _console_types = [ironic_console_type] %}
+  {% set _compute_arch_list = groups['nova_compute'] | map('extract', hostvars, ['ansible_facts', 'architecture']) | map('default', 'disabled') %}
+  {% for arch in _compute_arch_list | unique %}
+  {%   set _ = _console_types.append(nova_console_type_mapping[arch]) %}
+  {% endfor %}
+  {{ _console_types | unique }}
