Test coordination for Telemetry stack
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_aodh/+/967067
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-os_ceilometer/+/967064

Closes-Bug: #1629395
Change-Id: I629be7ee4dba515b86e27531a91318586926f258
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/vars/main.yml
+++ b/tests/roles/bootstrap-host/vars/main.yml
@@ -58,7 +58,7 @@ bootstrap_host_scenarios_expanded: |-
   {%   set _ = scenario_list.extend(['ceph'])  %}
   {% endif %}
   {% if ['telemetry', 'aodh', 'ceilometer', 'gnocchi'] | intersect(bootstrap_host_scenarios) | length > 0 %}
-  {%   set _ = scenario_list.extend(['aodh', 'ceilometer', 'gnocchi']) %}
+  {%   set _ = scenario_list.extend(['aodh', 'ceilometer', 'gnocchi', 'zookeeper']) %}
   {% endif %}
   {% if 'translations' in bootstrap_host_scenarios %}
   {%   set _ = scenario_list.extend(['designate', 'heat', 'magnum', 'swift', 'trove']) %}
