--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -308,8 +308,7 @@
     check:
       jobs:
         - openstack-ansible-tox-molecule-debian-bookworm
-        - openstack-ansible-tox-molecule-debian-trixie:
-            voting: false
+        - openstack-ansible-tox-molecule-debian-trixie
         - openstack-ansible-tox-molecule-ubuntu-noble
         - openstack-ansible-tox-molecule-centos-10-stream
         - openstack-ansible-tox-molecule-rockylinux-10:
@@ -317,6 +316,7 @@
     gate:
       jobs:
         - openstack-ansible-tox-molecule-debian-bookworm
+        - openstack-ansible-tox-molecule-debian-trixie
         - openstack-ansible-tox-molecule-ubuntu-noble
         - openstack-ansible-tox-molecule-centos-10-stream
 
