Add minimal AIO files for k8s clusters
Also adds collection requirements so osa ops CI can install
the relevant collection from zuul CI folders, not from
upstream 'master'.

Change-Id: I3db9c2b0479ed2077dd1214eb74e43392a241e07
Signed-off-by: Andrew Bonney <andrew.bonney@bbc.co.uk>

--- a/ansible-collection-requirements.yml
+++ b/ansible-collection-requirements.yml
@@ -48,3 +48,7 @@ collections:
   source: https://github.com/ansible-collections/openvswitch.openvswitch
   type: git
   version: 2.1.1
+- name: osa_ops.mcapi_vexxhost
+  source: https://opendev.org/openstack/openstack-ansible-ops#/mcapi_vexxhost
+  type: git
+  version: master
