--- a/tests/roles/bootstrap-host/vars/main.yml
+++ b/tests/roles/bootstrap-host/vars/main.yml
@@ -41,6 +41,9 @@ bootstrap_host_scenarios_expanded: |-
   {%   set _ = scenario_list.extend(['cinder', 'glance', 'neutron', 'nova', 'placement', 'horizon']) %}
   {% endif %}
   {# Service additions based on scenario presence #}
+  {% if ('capi' in bootstrap_host_scenarios) %}
+  {%   set _ = scenario_list.extend(['k8s'])  %}
+  {% endif %}
   {% if 'cloudkitty' in bootstrap_host_scenarios %}
   {%   set _ = scenario_list.extend(['ceilometer', 'gnocchi']) %}
   {% endif %}
