--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -92,6 +92,7 @@
       - name: openstack/openstack-ansible-plugins
       - name: openstack/openstack-ansible-rabbitmq_server
       - name: openstack/openstack-ansible-repo_server
+      - name: openstack/openstack-ansible-ops
       - name: openstack/ansible-role-httpd
       - name: openstack/ansible-role-systemd_service
       - name: openstack/ansible-role-systemd_mount
