--- a/etc/openstack_deploy/env.d/pods.yml.example
+++ b/etc/openstack_deploy/env.d/pods.yml.example
@@ -32,13 +32,13 @@ component_skel:
 container_skel:
   pod1_containers:
     properties:
-      is_nest: True
+      is_nest: true
   pod2_containers:
     properties:
-      is_nest: True
+      is_nest: true
   pod3_containers:
     properties:
-      is_nest: True
+      is_nest: true
   pod4_containers:
     properties:
-      is_nest: True
+      is_nest: true
