--- a/etc/openstack_deploy/group_vars/haproxy/first_backend.yml.az.example
+++ b/etc/openstack_deploy/group_vars/haproxy/first_backend.yml.az.example
@@ -1,7 +1,7 @@
 ---
 
-haproxy_drain: True
-haproxy_ssl_all_vips: True
+haproxy_drain: true
+haproxy_ssl_all_vips: true
 haproxy_bind_external_lb_vip_interface: eth20
 haproxy_bind_internal_lb_vip_interface: eth1
 haproxy_bind_external_lb_vip_address: "*"
