--- a/etc/openstack_deploy/openstack_user_config.yml.example
+++ b/etc/openstack_deploy/openstack_user_config.yml.example
@@ -704,7 +704,7 @@
 #          iscsi_ip_address: 172.29.244.5
 #          san_login: username
 #          san_password: password
-#          san_thin_provision: True
+#          san_thin_provision: true
 #
 #
 # Example:
@@ -793,7 +793,7 @@
 #         generic:
 #           share_backend_name: GENERIC
 #           share_driver: manila.share.drivers.generic.GenericShareDriver
-#           driver_handles_share_servers: True
+#           driver_handles_share_servers: true
 #           service_instance_flavor_id: 100
 #           service_image_name: manila-service-image
 #           service_instance_user: manila
