Stop using infra mirror for mariadb
This aims to disable upgrade jobs.

Current mariadb.com mirror that's being cached by infra does not
contain modern MariaDB versions and can't be used any longer for
testing.

Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-galera_server/+/968347
Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/967775
Change-Id: I849fe94fa05483cda21175b3a283e74c93deaa71
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -62,23 +62,19 @@
     name: openstack-ansible-upgrade-infra_lxc-jobs
     check:
       jobs:
-        - openstack-ansible-upgrade-infra_lxc-rockylinux-9
-        - openstack-ansible-upgrade-infra_lxc-ubuntu-jammy
-    gate:
-      jobs:
-        - openstack-ansible-upgrade-infra_lxc-rockylinux-9
-        - openstack-ansible-upgrade-infra_lxc-ubuntu-jammy
+        - openstack-ansible-upgrade-infra_lxc-rockylinux-9:
+            voting: false
+        - openstack-ansible-upgrade-infra_lxc-ubuntu-jammy:
+            voting: false
 
 - project-template:
     name: openstack-ansible-upgrade-aio_metal-jobs
     check:
       jobs:
-        - openstack-ansible-upgrade-aio_metal-rockylinux-9
-        - openstack-ansible-upgrade-aio_metal-ubuntu-jammy
-    gate:
-      jobs:
-        - openstack-ansible-upgrade-aio_metal-rockylinux-9
-        - openstack-ansible-upgrade-aio_metal-ubuntu-jammy
+        - openstack-ansible-upgrade-aio_metal-rockylinux-9:
+            voting: false
+        - openstack-ansible-upgrade-aio_metal-ubuntu-jammy:
+            voting: false
 
 - project-template:
     name: openstack-ansible-deploy-infra_lxc-jobs
